deployment_frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: smartagri-front
  namespace: ingress-nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: smartagri-front
  template:
    metadata:
      labels:
        app: smartagri-front
    spec:
      containers:
      - name: smartagri-front
        image: maryem1994/smartagri:front-3
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: smartagri-front
  namespace: ingress-nginx
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: smartagri-front
