backend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: back-ingress
  namespace: ingress-nginx
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: back.smartagri-app.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: smartagri-back
                port:
                  number: 3000
